--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -64,7 +64,7 @@ jobs:
           git add spell-check-results.zip
           git commit -m 'Add spell check'
           git pull origin "preview-${{ github.event.pull_request.number }}"
-          git push origin "preview-${{ github.event.pull_request.number }}"
+          git push --force "preview-${{ github.event.pull_request.number }}"
 
       # Handle the commenting
       - name: Find Comment
