--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -63,7 +63,7 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add spell-check-results.zip
           git commit -m 'Add spell check'
-          git pull origin "preview-${{ github.event.pull_request.number }}"
+          git pull origin "preview-${{ github.event.pull_request.number }}" --allow-unrelated-histories
           git push --force "preview-${{ github.event.pull_request.number }}"
 
       # Handle the commenting
