Print out url directly

--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -66,9 +66,8 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           changes=$(git diff --name-only origin/main -- docs)
-          git add docs/*
+          git add -A
           git commit -m 'Render bookdown preview' || echo "No changes to commit"
-          git pull origin "preview-${{ github.event.pull_request.number }}" --allow-unrelated-histories
           git push --force origin "preview-${{ github.event.pull_request.number }}" || echo "No changes to push"
 
           if [[ -n $changes ]]; then
