--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -44,6 +44,8 @@ group:
       dest: .github/ISSUE_TEMPLATE/course-content-add.md
     - source: scripts/spell-check.R
       dest: scripts/spell-check.R
+    - source: scripts/get_spell_errors.R
+      dest: scripts/get_spell_errors.R
     - source: scripts/git_repo_check.R
       dest: scripts/git_repo_check.R
     - source: code_of_conduct.md
