--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -20,6 +20,8 @@ group:
     jhudsl/Cancer_Genome_Informatics
     jhudsl/Cancer-Imaging-Informatics
     jhudsl/GDSCN_Book_SARS_Galaxy_on_AnVIL
+    abyzovlab/CNVpytor_course
+    
 ###ADD NEW REPO HERE following the format above#
   files:
     - source: .github/workflows/render-bookdown.yml
