--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          changes=$(git diff --name-only origin/main -- docs)
+          changes=$(git diff --name-only main -- docs)
 
           if [[ -n $changes ]]; then
             echo ::set-output name=changes::$(echo 'changes')
