get rid of dev changes

--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -69,12 +69,12 @@ jobs:
           changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
 
           if [[ -n $changes ]]; then
-            echo 'changes'
+            echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
             git push --force origin "preview-${{ github.event.pull_request.number }}"
           else
-            echo 'no_changes'
+            echo ::set-output name=changes::$(echo 'no_changes')
           fi
 
       - name: Find Comment
