--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -25,6 +25,13 @@ jobs:
         run: |
           rm -r docs/*
 
+      # Set up git checkout
+      - name: Set up git checkout
+        run: |
+          git checkout -b "preview-${{ github.event.pull_request.number }}"
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+
       # Run bookdown rendering
       - name: Run bookdown render
         id: bookdown
@@ -59,14 +66,11 @@ jobs:
       - name: Commit rendered bookdown files to development branch
         id: commit
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
           changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
 
           if [[ -n $changes ]]; then
             echo ::set-output name=changes::$(echo 'changes')
-            git checkout -b "preview-${{ github.event.pull_request.number }}"
-            git add -A
+            git add . --force
             git commit -m 'Render bookdown preview'
             git push --force origin "preview-${{ github.event.pull_request.number }}"
           else
