--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -21,6 +21,7 @@ group:
     jhudsl/Cancer-Imaging-Informatics
     jhudsl/GDSCN_Book_SARS_Galaxy_on_AnVIL
     abyzovlab/CNVpytor_course
+    opencasestudies/OCS_Guide
     
 ###ADD NEW REPO HERE following the format above#
   files:
