--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -15,7 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.name != 'OTTR_Template'
     steps:
-
+      - name: login as jhudsl-robot
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+          
       # Check out current repository
       - name: Fetch current branch
         uses: actions/checkout@v2
@@ -94,7 +98,7 @@ jobs:
             resources/images/04-figures_files \
             Course_Name.rds \
             docs/*.html \
-            docs/*.md 
+            docs/*.md
 
       # Commit modified files
       - name: Commit deleted files
