--- a/.github/workflows/test-send-updates.yml
+++ b/.github/workflows/test-send-updates.yml
@@ -16,6 +16,11 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - name: login as jhudsl-robot
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+          
       - name: Checkout Repository
         uses: actions/checkout@master
 
