--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -15,8 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: login as jhudsl-robot
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
 
+      - uses: actions/checkout@v2
+      
       - name: URLs-checker
         uses: urlstechie/urlchecker-action@master
         with:
