--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -15,14 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.name != 'OTTR_Template'
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+
       - name: login as jhudsl-robot
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
-          
-      # Check out current repository
-      - name: Fetch current branch
-        uses: actions/checkout@v2
 
 ##### Filing issues!
 
