--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -33,22 +33,23 @@ jobs:
         run: |
           results=$(Rscript "scripts/spell-check.R")
           echo "::set-output name=sp_chk_results::$results"
-          cat spell_check_results.tsv
+          cat resources/spell_check_results.tsv
 
       - name: Archive spelling errors
         uses: actions/upload-artifact@v2
         with:
           name: spell-check-results
-          path: spell_check_results.tsv
+          path: resources/spell_check_results.tsv
 
       - name: Build components of the spell check comment
         id: build-components
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          sp_error_url=$(https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/heads/}resources/spell_check_results.tsv)
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=sp_error_url::$(Rscript --vanilla scripts/get_spell_errors.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
+          echo ::set-output name=sp_error_url::$sp_error_url
 
       # Handle the commenting
       - name: Find Comment
@@ -94,5 +95,6 @@ jobs:
       - name: Commit
         run: |
           git add \*.Rmd
+          git add resources/spell-check.zip
           git commit -m 'Style Rmds' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
