--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -28,7 +28,10 @@ jobs:
       # Set up git checkout
       - name: Set up git checkout
         run: |
-          git checkout -b "preview-${{ github.event.pull_request.number }}"
+          branch_name='preview-${{ github.event.pull_request.number }}''
+          git rev-parse --quiet --verify refs/heads/$branch_name >/dev/null && exists=true || exists=false
+          if $exists; then git checkout $branch_name; else git checkout -b $branch_name; fi
+
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
 
