--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Spell check errors
         run: |
           # Get on the preview branch if it exists. If it doesn't create it.
-          branch_name='preview-${{ github.event.pull_request.number }}''
+          branch_name='preview-${{ github.event.pull_request.number }}'
           git rev-parse --quiet --verify refs/heads/$branch_name >/dev/null && exists=true || exists=false
           if $exists; then git checkout $branch_name; else git checkout -b $branch_name; fi
 
