--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -50,13 +50,14 @@ jobs:
 
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
-          git push origin || echo "No changes to commit"
+          git push --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
         id: build-components
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          branch_name='preview-${{ github.event.pull_request.number }}'
           sp_error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/spell_check_results.tsv
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
