--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -20,10 +20,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      # We want a fresh run of the renders each time
-      - name: Delete old docs/*
-        run: |
-          rm -r docs/*
 
       # Set up git checkout
       - name: Set up git checkout
@@ -35,6 +31,9 @@ jobs:
           branch_name='preview-${{ github.event.pull_request.number }}'
           git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
           if $exists; then git checkout $branch_name; else git checkout -b $branch_name; fi
+
+          # Clear out old docs files and start fresh
+          rm -r docs/*
 
       # Run bookdown rendering
       - name: Run bookdown render
