--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -50,7 +50,7 @@ jobs:
 
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
-          git merge -s recursive --strategy-option=theirs ${{ github.event.after }}
+          git pull $branch_name
           git push --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
