change up pull step

--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -51,9 +51,8 @@ jobs:
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
 
-          git branch --set-upstream-to=origin/$branch_name $branch_name
           git pull
-          git push
+          git push -u
 
       - name: Build components of the spell check comment
         id: build-components
