--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -51,8 +51,7 @@ jobs:
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
 
-          git pull
-          git push -u
+          git push --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
         id: build-components
