--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -24,8 +24,8 @@ jobs:
       # Set up git checkout
       - name: Set up git checkout
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
 
           # Get on the preview branch if it exists. If it doesn't create it.
           branch_name='preview-${{ github.event.pull_request.number }}'
@@ -66,7 +66,7 @@ jobs:
           exit 1
 
       # Commit the rendered bookdown files
-      - name: Commit rendered bookdown files to development branch
+      - name: Commit rendered bookdown files to preview branch
         id: commit
         run: |
           changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
@@ -75,7 +75,8 @@ jobs:
             echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
-            git push --set-upstream origin "preview-${{ github.event.pull_request.number }}"
+            git pull --set-upstream origin "preview-${{ github.event.pull_request.number }}"
+            git push --force --set-upstream origin "preview-${{ github.event.pull_request.number }}"
           else
             echo ::set-output name=changes::$(echo 'no_changes')
           fi
