--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -52,7 +52,7 @@ jobs:
           git commit -m 'add spell check file'
 
           git pull --set-upstream origin $branch_name
-          git push --set-upstream origin $branch_name
+          git push --force --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
         id: build-components
