--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -75,7 +75,7 @@ jobs:
             echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
-            git pull --set-upstream origin "preview-${{ github.event.pull_request.number }}"
+            git pull --set-upstream origin "preview-${{ github.event.pull_request.number }}" --allow-unrelated-histories
             git push --force --set-upstream origin "preview-${{ github.event.pull_request.number }}"
           else
             echo ::set-output name=changes::$(echo 'no_changes')
