Minor annotation update

--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -17,9 +17,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout
+      - name: Checkout files
         uses: actions/checkout@v2
-
 
       # Set up git checkout
       - name: Set up git checkout
