fix if statement

--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -46,7 +46,13 @@ jobs:
           # Get on the preview branch if it exists. If it doesn't create it.
           branch_name='preview-${{ github.event.pull_request.number }}'
           git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
-          if $exists; then git checkout $branch_name; else git checkout -b $branch_name; fi
+
+          if [[ $exists == true ]];
+          then
+            git checkout $branch_name
+          else
+            git checkout -b $branch_name;
+          fi
 
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
