--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -29,9 +29,14 @@ jobs:
           # Get on the preview branch if it exists. If it doesn't create it.
           branch_name='preview-${{ github.event.pull_request.number }}'
           git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
-          if $exists; then git checkout $branch_name; else git checkout -b $branch_name; fi
 
-          # Clear out old docs files and start fresh
+          if [[ $exists == true ]];
+          then
+            git checkout $branch_name
+          else
+            git checkout -b $branch_name;
+          fi
+
           rm -r docs/*
 
       # Run bookdown rendering
