--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -57,7 +57,11 @@ jobs:
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
 
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories
+          if [[ $exists == true ]];
+          then
+            git pull --set-upstream origin $branch_name --allow-unrelated-histories
+          fi
+          
           git push --force --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
