--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -50,18 +50,13 @@ jobs:
           if [[ $exists == true ]];
           then
             git checkout $branch_name
+            git pull --set-upstream origin $branch_name --allow-unrelated-histories
           else
-            git checkout -b $branch_name;
+            git checkout -b $branch_name
           fi
 
           git add --force resources/spell_check_results.tsv
           git commit -m 'add spell check file'
-
-          if [[ $exists == true ]];
-          then
-            git pull --set-upstream origin $branch_name --allow-unrelated-histories
-          fi
-          
           git push --force --set-upstream origin $branch_name
 
       - name: Build components of the spell check comment
