--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
-          git config pull.ff only
+          git config pull.rebase false
 
           # Get on the preview branch if it exists. If it doesn't create it.
           branch_name='preview-${{ github.event.pull_request.number }}'
