--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -17,20 +17,29 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout
+      - name: Checkout files
         uses: actions/checkout@v2
-
-      # We want a fresh run of the renders each time
-      - name: Delete old docs/*
-        run: |
-          rm -r docs/*
 
       # Set up git checkout
       - name: Set up git checkout
         run: |
-          git checkout -b "preview-${{ github.event.pull_request.number }}"
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+          git config pull.rebase false
+
+          # Get on the preview branch if it exists. If it doesn't create it.
+          branch_name='preview-${{ github.event.pull_request.number }}'
+          git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
+
+          if [[ $exists == true ]];
+          then
+            git checkout $branch_name
+            git pull --set-upstream origin $branch_name --allow-unrelated-histories
+          else
+            git checkout -b $branch_name
+          fi
+
+          rm -r docs/*
 
       # Run bookdown rendering
       - name: Run bookdown render
@@ -63,7 +72,7 @@ jobs:
           exit 1
 
       # Commit the rendered bookdown files
-      - name: Commit rendered bookdown files to development branch
+      - name: Commit rendered bookdown files to preview branch
         id: commit
         run: |
           changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
@@ -72,7 +81,8 @@ jobs:
             echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
-            git push --force origin "preview-${{ github.event.pull_request.number }}"
+            git pull --set-upstream origin "preview-${{ github.event.pull_request.number }}" --allow-unrelated-histories
+            git push --force --set-upstream origin "preview-${{ github.event.pull_request.number }}"
           else
             echo ::set-output name=changes::$(echo 'no_changes')
           fi
