--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -18,11 +18,52 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v2
 
-      - name: login as jhudsl-robot
+      - name: Login as jhudsl-robot
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
+##### Delete Template-specific files that aren't needed for new courses
+
+      # Cleanup Template-specific bits
+      - name: Cleanup
+        run: |
+          # Cleanup
+          rm -rf \
+            .github/workflows/send-updates.yml \
+            .github/workflows/test-send-updates.yml \
+            .github/sync.yml \
+            .github/test-sync.yml \
+            .github/workflows/starting-course.yml \
+            .github/ISSUE_TEMPLATE/course-template-problem-report.md \
+            .github/ISSUE_TEMPLATE/course-template-feature-request.md \
+            resources/code_output \
+            resources/screenshots \
+            resources/course_screenshots \
+            resources/gs_slides \
+            resources/image_to_slide_key.tsv \
+            resources/images/02-chapter_of_course_files \
+            resources/images/03-test_cases_files \
+            resources/images/04-figures_files \
+            Course_Name.rds \
+            docs/*.html \
+            docs/*.md
+
+      # Commit modified files
+      - name: Commit deleted files
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Template cleanup"
+
+      # Push changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          branch: main
+          github_token: ${{ secrets.GH_PAT }}
+          
 ##### Filing issues!
 
       # Issue for what repository settings need to be set
@@ -72,44 +113,3 @@ jobs:
           title: Reminder - Add to jhudsl library
           content-filepath: .github/automatic-issues/add-to-library.md
           labels: automated training issue
-
-##### Delete Template-specific files that aren't needed for new courses
-
-      # Cleanup Template-specific bits
-      - name: Cleanup
-        run: |
-          # Cleanup
-          rm -rf \
-            .github/workflows/send-updates.yml \
-            .github/workflows/test-send-updates.yml \
-            .github/sync.yml \
-            .github/test-sync.yml \
-            .github/workflows/starting-course.yml \
-            .github/ISSUE_TEMPLATE/course-template-problem-report.md \
-            .github/ISSUE_TEMPLATE/course-template-feature-request.md \
-            resources/code_output \
-            resources/screenshots \
-            resources/course_screenshots \
-            resources/gs_slides \
-            resources/image_to_slide_key.tsv \
-            resources/images/02-chapter_of_course_files \
-            resources/images/03-test_cases_files \
-            resources/images/04-figures_files \
-            Course_Name.rds \
-            docs/*.html \
-            docs/*.md
-
-      # Commit modified files
-      - name: Commit deleted files
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "Template cleanup"
-
-      # Push changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: main
-          github_token: ${{ secrets.GH_PAT }}
