--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -2,7 +2,7 @@
 # For info on how to update this file see: https://github.com/marketplace/actions/repo-file-sync-action#%EF%B8%8F-sync-configuration
 
 group:
-  # Repositories to recieve changes
+  # Repositories to receive changes
   repos: |
     jhudsl/Documentation_and_Usability
     jhudsl/Informatics_Research_Leadership
