--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -42,7 +42,7 @@ jobs:
           rm -r docs/*
 
       # Add remote if this is a fork
-      - name: Commit rendered bookdown files to preview branch
+      - name: Add remote if its a fork
         if: github.event.repository.name == 'OTTR_Template'
         run: git remote add jhudsl git@github.com:jhudsl/OTTR_Template.git
 
