Rearrange remote adds

--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -43,13 +43,18 @@ jobs:
           name: spell-check-results
           path: resources/spell_check_results.tsv
 
+      # Add remote if this is a fork
+      - name: Add remote if its a fork
+        if: github.event.repository.name == 'OTTR_Template'
+        run: |
+          git remote add jhudsl https://github.com/jhudsl/OTTR_Template
+          git fetch jhudsl
+
       - name: Spell check errors
         run: |
           # Get on the preview branch if it exists. If it doesn't create it.
           branch_name='preview-${{ github.event.pull_request.number }}'
           git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
-
-          git remote add jhudsl git@github.com:jhudsl/OTTR_Template.git
 
           if [[ $exists == true ]];
           then
