--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -41,17 +41,6 @@ jobs:
 
           rm -r docs/*
 
-      # Add remote if this is a fork
-      - name: Add remote if its a fork
-        if: github.event.repository.name == 'OTTR_Template'
-        run: |
-          org_name=$(dirname ${{github.repository}})
-          echo ::set-output name=org_name::$org_name
-          echo $org_name
-
-          git remote add $org_name https://github.com/$org_name/OTTR_Template
-          git fetch $org_name
-
       # Run bookdown rendering
       - name: Run bookdown render
         id: bookdown
@@ -82,9 +71,8 @@ jobs:
           echo Coursera status ${{steps.coursera.outcome}}
           exit 1
 
-      # Commit the rendered bookdown files if this isn't to the OTTR Template
-      - name: Commit rendered bookdown
-        if: github.event.repository.name != 'OTTR_Template'
+      # Commit the rendered bookdown files
+      - name: Commit rendered bookdown files to preview branch
         id: commit
         run: |
           changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
