--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -12,8 +12,9 @@ permissions: write-all
 jobs:
   # This workflow contains a single job called "build-all"
   build-all:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container:
+      image: jhudsl/course_template
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -25,40 +26,20 @@ jobs:
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
-          git config pull.rebase false
 
-          # Get on the preview branch if it exists. If it doesn't create it.
-          branch_name='preview-${{ github.event.pull_request.number }}'
-          git rev-parse --quiet --verify $branch_name >/dev/null && exists=true || exists=false
-
-          if [[ $exists == true ]];
-          then
-            git checkout $branch_name
-            git pull --set-upstream origin $branch_name --allow-unrelated-histories
-          else
-            git checkout -b $branch_name
-          fi
-
+          git checkout -b "preview-${{ github.event.pull_request.number }}"
           rm -r docs/*
 
       # Run bookdown rendering
       - name: Run bookdown render
         id: bookdown
-        run: |
-          docker run \
-          --mount type=bind,target=/home/rstudio,source=$PWD \
-          jhudsl/course_template \
-          Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
+        run: Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
 
 ##### If you do not wish to host your course on Coursera, you can delete this section #####
       # Run Coursera version
       - name: Run Coursera version of render
         id: coursera
-        run: |
-          docker run \
-          --mount type=bind,target=/home/rstudio,source=$PWD \
-          jhudsl/course_template \
-          Rscript -e "leanbuild::render_coursera()"
+        run: Rscript -e "leanbuild::render_coursera()"
 
 ##### End of Coursera rendering section ########################################
 
@@ -81,8 +62,7 @@ jobs:
             echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
-            git pull --set-upstream origin "preview-${{ github.event.pull_request.number }}" --allow-unrelated-histories
-            git push --force --set-upstream origin "preview-${{ github.event.pull_request.number }}"
+            git push --force origin "preview-${{ github.event.pull_request.number }}"
           else
             echo ::set-output name=changes::$(echo 'no_changes')
           fi
