--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -56,15 +56,16 @@ jobs:
       - name: Commit rendered bookdown files to preview branch
         id: commit
         run: |
-          changes=$(git diff --name-only `git log --format="%H" -n 1 origin/main` -- docs)
+          changes=$(git diff --name-only -- docs)
 
-          if [[ -n $changes ]]; then
+          if -z $changes
+          then
+            echo ::set-output name=changes::$(echo 'no_changes')
+          else
             echo ::set-output name=changes::$(echo 'changes')
             git add . --force
             git commit -m 'Render bookdown preview'
             git push --force origin "preview-${{ github.event.pull_request.number }}"
-          else
-            echo ::set-output name=changes::$(echo 'no_changes')
           fi
 
       - name: Find Comment
