Minor polishing of steps (#421)
* Test leanpub from here

* Update comments

* Add check quizzes too

* Couple edits

* Shut them off for now

* Update comments

* Note which places needed to be uncommented

* Just making the step clearer

* Add a git fetch

* Add quizzes to spell check

--- a/.github/workflows/check-quizzes.yml
+++ b/.github/workflows/check-quizzes.yml
@@ -5,10 +5,12 @@ name: Check Leanpub Quizzes
 
 on:
   workflow_dispatch:
+### UNCOMMENT THIS SECTION IF YOU WISH PREPARE YOUR COURSE QUIZZES FOR LEANPUB AUTOMATICALLY
 #  pull_request:
 #    branches: [ main, staging]
 #    paths:
 #      - 'quizzes/*'
+######### END OF SECTION #########
 
 jobs:
   check-quizzes:
@@ -35,6 +37,7 @@ jobs:
             git push --set-upstream origin $branch_name
           else
             echo branch does exist
+            git fetch --all
             git checkout $branch_name
             git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
           fi
