Set default working directory

--- a/.github/workflows/pr-checks/render-preview.yml
+++ b/.github/workflows/pr-checks/render-preview.yml
@@ -15,7 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    defaults:
+      run:
+        working-directory: ../
+        
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout files
