--- a/.github/workflows/pr-checks/url-checker.yml
+++ b/.github/workflows/pr-checks/url-checker.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ../
 
     steps:
       - name: checkout repo
