--- a/.github/workflows/pr-checks/check-quizzes.yml
+++ b/.github/workflows/pr-checks/check-quizzes.yml
@@ -17,7 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template
-
+    defaults:
+      run:
+        working-directory: ../
+        
     steps:
       - name: Checkout files
         uses: actions/checkout@v2
