--- a/.github/workflows/pr-checks/check-quizzes.yml
+++ b/.github/workflows/pr-checks/check-quizzes.yml
@@ -19,8 +19,8 @@ jobs:
       image: jhudsl/course_template
     defaults:
       run:
-        working-directory: ../
-        
+        working-directory: ../..
+
     steps:
       - name: Checkout files
         uses: actions/checkout@v2
