--- a/.github/workflows/pr-checks/style-and-sp-check.yml
+++ b/.github/workflows/pr-checks/style-and-sp-check.yml
@@ -17,8 +17,8 @@ jobs:
       image: jhudsl/course_template
     defaults:
       run:
-        working-directory: ../
-        
+        working-directory: ../..
+
     steps:
       - name: Checkout files
         uses: actions/checkout@v2
