--- a/.github/workflows/pr-checks/url-checker.yml
+++ b/.github/workflows/pr-checks/url-checker.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ../
+        working-directory: ../..
 
     steps:
       - name: checkout repo
